--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,12 @@ chrono = "0.4.24"
 futures = "0.3.27"
 irc = { git = "https://github.com/aatxe/irc", version = "0.15.0" }
 md5 = "0.7.0"
-reqwest = { version = "0.11.14", features = ["json"] }
+reqwest = { version = "0.11.14", features = ["json", "blocking"] }
+#rustpython-vm = { git = "https://github.com/RustPython/RustPython", version = "0.2.0" }
+schemars = "0.8.12"
 serde = { version = "1.0.157", features = ["derive"] }
 serde_json = "1.0.94"
 tempfile = "3.4.0"
 textwrap = "0.16.0"
 tokio = { version = "1.26.0", features = ["full"] }
-wasmtime = { version = "9.0.0", features = ["component-model"] }
+#wasmtime = { version = "9.0.0", features = ["component-model"] }
