--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
+async-openai = "0.16.2"
 async-trait = "0.1.68"
 bytes = "1.4.0"
 chrono = "0.4.24"
@@ -21,4 +22,5 @@ serde_json = "1.0.94"
 tempfile = "3.4.0"
 textwrap = "0.16.0"
 tokio = { version = "1.26.0", features = ["full"] }
+url = "2.4.1"
 #wasmtime = { version = "9.0.0", features = ["component-model"] }
