--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0.70"
 async-openai = "0.19.0"
 async-trait = "0.1.68"
 bytes = "1.4.0"
-chrono = "0.4.24"
+chrono = {version = "0.4.24", features = ["serde"] }
 futures = "0.3.27"
 irc = { git = "https://github.com/aatxe/irc", version = "0.15.0" }
 md5 = "0.7.0"
