--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ chrono = {version = "0.4.24", features = ["serde"] }
 futures = "0.3.27"
 irc = { git = "https://github.com/aatxe/irc", version = "0.15.0" }
 md5 = "0.7.0"
+numbat = { version = "1.11.0", path = "../numbat/numbat", default-features = false }
 reqwest = { version = "0.11.14", features = ["json", "blocking"] }
 #rustpython-vm = { git = "https://github.com/RustPython/RustPython", version = "0.2.0" }
 schemars = "0.8.12"
